# briefcase-pyqt6-build-example

./: README.md  build.bat  build.sh  pyproject.toml  requirements.txt
.github/workflows/: briefcase_build.yml  briefcase_build_docker.yml
smallapp/: gui.py
smallapp/layouts/: content_window.py  error_message.py  reader_web.py
